@@ -1,6 +1,7 @@
 1.0.0 - currently working on
 
 Features:
+- [#5662] Add an EventStateService
 - [#5660] Add an EmailService
 - [#5664] Per-event flag for muting the notification emails
 - [#5651] Convert the cron job to a Scheduler task
@@ -23,6 +24,7 @@ Bug fixes:
 - [#5321] Update .htaccess to be Apache 2.4 compatible
 
 Cleanup:
+- [#5660] Move the cancelation/confirmation of an event to services
 - [#5659] Remove the "used tools" section from the manual
 - [#5658] Replace "language" in the PHPDoc
 - [#5657] Remove the byte order mark from the ReST files
